--- a/Bridel'sGameEngine/imgui.ini
+++ b/Bridel'sGameEngine/imgui.ini
@@ -79,17 +79,47 @@ Size=353,424
 Collapsed=0
 
 [Window][Simulation Speed]
-Pos=375,7
+Pos=936,5
 Size=338,94
 Collapsed=0
 
 [Window][Camera]
-Pos=373,106
+Pos=937,102
 Size=339,226
-Collapsed=1
+Collapsed=0
 
 [Window][Light]
 Pos=12,10
 Size=356,336
 Collapsed=1
+
+[Window][Box 69]
+Pos=26,57
+Size=166,100
+Collapsed=0
+
+[Window][Boxes]
+Pos=13,40
+Size=288,77
+Collapsed=0
+
+[Window][Box 1]
+Pos=389,28
+Size=469,304
+Collapsed=1
+
+[Window][Box 2]
+Pos=190,152
+Size=166,100
+Collapsed=0
+
+[Window][Box 0]
+Pos=854,423
+Size=419,288
+Collapsed=0
+
+[Window][Box 4]
+Pos=60,60
+Size=32,35
+Collapsed=0
 
