--- a/Bridel'sGameEngine/imgui.ini
+++ b/Bridel'sGameEngine/imgui.ini
@@ -84,7 +84,7 @@ Size=338,94
 Collapsed=0
 
 [Window][Camera]
-Pos=937,102
+Pos=938,14
 Size=339,226
 Collapsed=0
 
@@ -121,5 +121,10 @@ Collapsed=0
 [Window][Box 4]
 Pos=60,60
 Size=32,35
+Collapsed=0
+
+[Window][Model]
+Pos=939,247
+Size=341,203
 Collapsed=0
 
