--- a/Bridel'sGameEngine/imgui.ini
+++ b/Bridel'sGameEngine/imgui.ini
@@ -90,7 +90,7 @@ Collapsed=0
 
 [Window][Light]
 Pos=12,10
-Size=356,336
+Size=356,314
 Collapsed=0
 
 [Window][Box 69]
@@ -126,5 +126,10 @@ Collapsed=0
 [Window][Model]
 Pos=939,247
 Size=341,203
+Collapsed=0
+
+[Window][Raw Input]
+Pos=380,14
+Size=197,66
 Collapsed=0
 
