--- a/Bridel'sGameEngine/imgui.ini
+++ b/Bridel'sGameEngine/imgui.ini
@@ -91,7 +91,7 @@ Collapsed=0
 [Window][Light]
 Pos=12,10
 Size=356,314
-Collapsed=0
+Collapsed=1
 
 [Window][Box 69]
 Pos=26,57
@@ -131,5 +131,15 @@ Collapsed=0
 [Window][Raw Input]
 Pos=380,14
 Size=197,66
+Collapsed=0
+
+[Window][Model 1]
+Pos=938,243
+Size=337,203
+Collapsed=0
+
+[Window][Model 2]
+Pos=938,450
+Size=338,204
 Collapsed=0
 
