--- a/Bridel'sGameEngine/imgui.ini
+++ b/Bridel'sGameEngine/imgui.ini
@@ -91,7 +91,7 @@ Collapsed=0
 [Window][Light]
 Pos=12,10
 Size=356,314
-Collapsed=1
+Collapsed=0
 
 [Window][Box 69]
 Pos=26,57
@@ -141,5 +141,10 @@ Collapsed=0
 [Window][Model 2]
 Pos=938,450
 Size=338,204
+Collapsed=0
+
+[Window][Plane]
+Pos=22,356
+Size=158,289
 Collapsed=0
 
